Closed Bug 714169 Opened 14 years ago Closed 14 years ago

File js/public/HashTable.h cause warning

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: hub, Assigned: hub)

Details

Attachments

(1 file, 1 obsolete file)

When building nightly, I have a lot of warnings caused by js/public/HashTable.h:204 The while(); statement. Will attach patch to change it to while() { } as to silence the warning while remaining correct.
using while() continue; as suggested by Waldo
Attachment #584830 - Attachment is obsolete: true
Attachment #584832 - Attachment is obsolete: true
Attachment #584832 - Attachment is obsolete: false
Attachment #584832 - Flags: review?
Attachment #584832 - Flags: review? → review?(jwalden+bmo)
Attachment #584832 - Flags: review?(jwalden+bmo) → review+
Assignee: general → hub
Status: NEW → ASSIGNED
OS: Mac OS X → All
Hardware: x86 → All
Target Milestone: --- → mozilla12
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: