Bug 714169 - Fix warning in HashTable.h by using |continue;| instead of |;|.  r=jwalden